# concrete

./: .dockerignore  .env.example  .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  Dockerfile.dind-builder  Dockerfile.webapp  LICENSE  Makefile  PG Local.session.sql  README.md  alembic.ini  build_and_push.sh  deploy_to_aws.sh  docker-compose.yml  foobarbaz.md  listener.sh  manage.py  mkdocs.yml  mypy.ini  pyproject.toml  run-mypy  server.py  start.sh  temp.json  test.txt
.github/: deploy_main_to_staging.yml
benchmarks/: README.md  concrete.idfk.json  pyproject.toml
benchmarks/concrete-inference/: README.md  pyproject.toml
benchmarks/concrete-inference/concrete-inference/: __main__.py
benchmarks/concrete-inference/concrete_inference/: __main__.py  create_dataset.py  utils.py
concrete/: __init__.py  __main__.py  _operators.py  abstract.py  admin.py  agents.py  apps.py  asgi.py  assistants.py  celery.py  celeryconfig.py  clients.py  context.py  models.py  operator_responses.py  operators.py  operators2.py  orchestrator.py  prompts.py  settings.py  state.py  tools.py  urls.py  utils.py  wsgi.py
config/: mkdocs.yml
demo2/: Dockerfile.demo2  app.py  start.sh
demo_webapp/: README.md  log.txt  server.py
notebooks/agent_webpage_helloworld/: Makefile  orchestrator.py  orchestrator_notebook.ipynb  pyproject.toml
src/concrete-async/: README.md  hello.py  pyproject.toml
src/concrete-async/concrete_async/: __init__.py  celery.py  celeryconfig.py  meta.py  models.py  tasks.py
src/concrete-core/: pyproject.toml
src/concrete-core/concrete/: __init__.py  __main__.py  abstract.py  clients.py  mermaid.py  operators.py  orchestrator.py  otel.py  prompts.py  state.py  tools.py  utils.py  webutils.py
src/concrete-core/concrete/clients/: __init__.py  base.py  http.py  openai.py
src/concrete-core/concrete/evals/: __init__.py  utils.py
src/concrete-core/concrete/models/: base.py  clients.py  messages.py
src/concrete-core/concrete/orchestrators/: __init__.py  base.py  software_orchestrator.py
src/concrete-core/concrete/projects/: __init__.py  dag_project.py  software_project.py
src/concrete-core/concrete/telemetry/: __init__.py  exporter.py  otel.py
src/concrete-core/concrete/tools/: __init__.py  arxiv.py  aws.py  contactbook.py  document.py  documentretriever.py  github.py  http.py  knowledge.py  math.py  meta.py  utils.py  validators.py
src/concrete-core/concrete/tools/document/: __init__.py
src/concrete-core/concrete/validators/: __init__.py  utils.py
src/concrete-core/concrete_core/: __main__.py  abstract.py  celery.py  clients.py  hello.py  orchestrator.py  tools.py  utils.py  webutils.py
src/concrete-core/concrete_core/models/: messages.py
src/concrete-db/: README.md  pyproject.toml
src/concrete-db/concrete_db/: __init__.py  crud.py
src/concrete-db/concrete_db/orm/: __init__.py  models.py  setup.py
src/concrete-otel/: README.md  pyproject.toml
src/concrete-otel/concrete_otel/: __init__.py
tests/example_apps/fastapi_helloworld/: Makefile  app.py  pyproject.toml
tests/example_apps/flask_helloworld/: Makefile  pyproject.toml
webapp/: README.md  common.py  pyproject.toml
webapp/agentserver/: README.md  logging.py  pyproject.toml  server.py
webapp/agentserver/scripts/: start.sh
webapp/agentserver/templates/: index.html
webapp/api/: README.md  crud.py  models.py  pyproject.toml  schemas.py  server.py
webapp/api/scripts/: start.sh
webapp/auth/: pyproject.toml  server.py
webapp/auth/scripts/: start.sh
webapp/daemons/: README.md  logging.py  pyproject.toml  server.py
webapp/daemons/scripts/: start.sh
webapp/daemons/templates/: index.html
webapp/demo/: README.md  server.py
webapp/demo/scripts/: build_and_push.sh  deploy_to_aws.sh  listener.sh  start.sh
webapp/demo/static/css/: style.css
webapp/demo/templates/: index.html
webapp/docs/: Caddyfile  mkdocs.yml  pyproject.toml
webapp/docs/config/: mkdocs.yml
webapp/docs/docs/: concepts.md  daemons.md  developer-guide.md  index.md  installation.md  operators.md  tools.md
webapp/docs/docs/developer-guide/: database.md  index.md  setup.md
webapp/docs/docs/developer-guide/deployments/: local.md
webapp/docs/docs/learn/: hello-world.md  index.md
webapp/docs/docs/learn/concepts/: daemons.md  index.md  operators.md  projects.md  tools.md
webapp/docs/docs/overrides/: main.html
webapp/docs/docs/sdk-reference/: database.md  index.md  messages.md  operators.md  orchestrators.md  projects.md  tools.md
webapp/docs/scripts/: start.sh
webapp/docs/site/: 404.html  index.html
webapp/docs/site/concepts/: index.html
webapp/docs/site/operators/: index.html
webapp/docs/site/projects/: index.html
webapp/docs/site/search/: search_index.json
webapp/docs/site/tools/: index.html
webapp/homepage/: pyproject.toml  server.py
webapp/homepage/scripts/: start.sh
webapp/homepage/static/css/: abop.css
webapp/homepage/templates/: index.html
webapp/homepage/templates/components/: header.html
webapp/homepage/templates/pages/: about.html  agentserver.html  concrete.html  contact_us.html  index.html
webapp/main/: models.py  patterns.py  pyproject.toml  server.py
webapp/main/scripts/: start.sh
webapp/main/static/css/: abop.css  style.css
webapp/main/static/js/: create_orchestrator.js
webapp/main/templates/: group_chat.html  index.html  operator.html  operators.html  orchestrator.html  orchestrators.html
webapp/main/templates/components/: back_button.html  download_project.html  footer.html  header.html  name_input.html  operator_form.html  operator_list.html  orchestrator_form.html  orchestrator_list.html  project_chat.html  project_form.html  project_list.html  sidebar_create_panel.html
webapp/main/templates/errors/: duplicate_operator.html  duplicate_orchestrator.html  duplicate_project.html  invalid_name_input.html
webapp/main/templates/pages/: index.html  log.html  operator.html  orchestrator.html  project.html
webapp/webapp-common/: README.md  pyproject.toml
webapp/webapp-common/webapp_common/: __init__.py  logger.py
(+207 files in other folders)
