[project]
authors = [
    {name = "Abstract Operators", email = "hello@abstractoperators.ai"},
]
requires-python = "<4.0.0,>=3.11.9"
dependencies = [
    "python-dotenv==1.0.1",
    "openai==1.40.5",
    "astroid==3.2.3",
    "astor==0.8.1",
    "celery==5.4.0",
    "sqlalchemy==2.0.34",
    "sqlmodel==0.0.22",
    "tenacity==9.0.0",
    "requests==2.32.3",
    "psycopg[binary]==3.2.3",
]
name = "concrete-operators"
version = "0.1.11"
description = "AI Agent Orchestration Platform"
readme = "README.md"



[tool.uv]
dev-dependencies = [
    "jupyterlab==4.2.5",
    "black==24.4.2",
    "flake8==7.1.0",
    "isort==5.13.2",
    "bandit==1.7.9",
    "pre-commit==3.7.1",
    "mypy==1.11.2",
    "alembic==1.13.2",
]

[tool.uv.workspace]
members = ["src/concrete-core", "src/concrete-async"]
# tooluse = [
#     "boto3==1.35.3",
#     "chardet==5.2.0",
#     "itsdangerous==2.2.0",
#     "pyjwt==2.9.0",
#     "cryptography==43.0.1",
# ]
# docs = [
#     "mkdocs-material==9.5.34",
# ]
# daemons = [
#     "pyjwt==2.9.0",
#     "cryptography==43.0.1",
# ]
# test = [
#     "pytest==8.3.2",
# ]

[tool.pdm.build]
includes = ["src/concrete"]
[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.bandit]
exclude_dirs = ["tests", "path/to/file"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]

