[project]
name = "concrete"
version = "0.0.0"
description = "AI Agent Orchestration"
readme = "README.md"
requires-python = ">=3.11.9, <4.0.0"

[tool.uv]
dev-dependencies = [
    "jupyterlab==4.2.5",
    "black==24.4.2",
    "flake8==7.1.0",
    "isort==5.13.2",
    "bandit==1.7.9",
    "pre-commit==3.7.1",
    "mypy==1.11.2",
    "alembic==1.13.2",
    "concrete-core",
    "concrete-async",
]

[tool.uv.workspace]
members = ["src/concrete-core", "src/concrete-async", "src/concrete-db"]

[tool.uv.sources]
concrete_core = { workspace = true }
concrete_async = { workspace = true }
concrete_db = { workspace = true }


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.bandit]
exclude_dirs = ["tests", "path/to/file"]
tests = ["B201", "B301"]
skips = ["B101", "B601"]


# tooluse = [
#     "boto3==1.35.3",
#     "chardet==5.2.0",
#     "itsdangerous==2.2.0",
#     "pyjwt==2.9.0",
#     "cryptography==43.0.1",
# ]
# docs = [
#     "mkdocs-material==9.5.34",
# ]
# daemons = [
#     "pyjwt==2.9.0",
#     "cryptography==43.0.1",
# ]
# test = [
#     "pytest==8.3.2",
# ]