[project]
name = "webapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9, <4.0.0"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.4",
    "pyjwt>=1.3.1",
    "python-multipart>=0.0.19", # Required for form data. https://fastapi.tiangolo.com/tutorial/request-files/
    "uvicorn>=0.32.1",
]
