[project]
name = "concrete-inference"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9, <4.0.0"
dependencies = [
    "numpy",
    "tiktoken",
    "anthropic",
    "transformers",
    "jedi",
    "tenacity",
    "datasets",
    "docker",
    "ghapi",
    "beautifulsoup4",
    "chardet",
    "GitPython",
    'pre-commit',
    'python-dotenv',
    'requests',
    'rich',
    'unidiff',
    'tqdm',
    "concrete-core[openai]>=0.0.7",
]



[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["concrete_inference"]