[project]
name = "concrete-async"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9, <4.0.0"
dependencies = [
    "concrete-core",
    "celery >5",
]

[tool.uv.sources]
concrete-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"