[project]
name = "concrete-async"
version = "0.0.0"
description = "AI Agent Orchestration, Asynchronous Support"
readme = "README.md"
requires-python = ">=3.11.9, <4.0.0"
dependencies = [
    "concrete-core",
    "celery>5",
]

[tool.uv.sources]
concrete-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"