[project]
name = "concrete-core"
version = "0.0.0"
description = "AI Agent Orchestration"
readme = "README.md"
requires-python = ">=3.11.9, <4.0.0"

dependencies = [
    "python-dotenv==1.0.1",
    "openai==1.40.5",
    "astroid==3.2.3",
    "pydantic>=2.9.2",
    "requests>=2.32.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
