[project]
name = "concrete-db"
version = "0.0.0"
description = "AI Agent Orchestration, Database Support"
readme = "README.md"
requires-python = ">=3.11.9, <4.0.0"
dependencies = [
    "concrete-core",
    "sqlmodel>=0.0.22",
    "psycopg[binary]>=3.2.3",
]

[tool.uv.sources]
concrete-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"