[project]
name = "agentserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9, <4.0.0"
dependencies = [
    "concrete-core[openai,tool-arxiv,tool-documentretriever,requests,otel,auth]>=0.0.7",
    "concrete-db",
    "webapp-common",
]

[tool.uv.sources]
concrete-db = { workspace = true }
webapp-common = { workspace = true }
