[project]
name = "auth"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9, <4.0.0"
dependencies = [
    "fastapi>=0.115.4",
    "gunicorn>=23.0.0",
    "uvicorn>=0.32.0",
    "concrete-core[openai,requests,auth,google-auth]>=0.0.4",
    "concrete-db",
    "webapp-common"
]
