[project]
name = "homepage"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9, <4.0.0"
dependencies = [
    "fastapi>=0.115.4",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.4",
    "uvicorn>=0.32.0",
]

[tool.uv.sources]
webapp = { workspace = true }
