[project]
name = "main"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9, <4.0.0"
dependencies = [
    "fastapi>=0.115.4",
    "gunicorn>=23.0.0",
    "uvicorn>=0.32.0",
    "concrete-core[auth,requests,openai,google-auth]>=0.0.4",
    "concrete-db>=0.0.0",
]
