[project]
name = "webapp-common"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Deng", email = "michaeldeng2003@gmail.com" }
]
requires-python = ">=3.11.9, <4.0.0"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "gunicorn>=23.0.0",
    "jinja2>=3.1.4",
    "pyjwt>=2.10.1",
    "python-multipart>=0.0.19",  # Required for form data. https://fastapi.tiangolo.com/tutorial/request-files/
    "uvicorn>=0.32.1",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
